# OCA-Duplex

./: .gitignore  .npmignore  LICENSE  README.md  SECURITY.md  index.js  install.cmd  install.ps1  package-lock.json  package.json
commands/: args.js  configure.js  doctor.js  init.js  layout.js  threads.js
core/: capture.js  classifier.js  content-extractor.js  git-v2.js  git.js  human-summary-v3.js  human-summary.js  knowledge-lifecycle.js  linker.js  parser.js  project-first-writer.js  quality.js  readable-project-writer.js  schema-v2.js  source-first-classifier.js  source-first-linker.js  source-first-parser.js  source-first-writer.js  text.js  title-generator.js  write-transaction.js  writer.js
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  RELEASING.md
runtime/: app-server-client.js  cli-runner.js  config.js  confirm-watch-v3.js  confirm-watch.js  context-buffer-v2.js  context-buffer.js  conversation-stream.js  data-reset.js  desktop-data.js  duplex-tracker-v2.js  duplex-tracker.js  json-line-router.js  process-info.js  project-resolver.js  workspace-policy.js
scripts/: alias-tools.js  backfill-digests.js  build-sidecar.mjs  project-tools.js  smoke-sidecar.mjs  today.js
templates/: config.example.json
test/: app-server-client.test.js  confirm-watch.test.js  core.test.js  data-reset.test.js  desktop-data.test.js  desktop-settings.test.js  (+4 more)
(+14 files in other folders)
