[package]
name = "oca-duplex-desktop"
version = "0.4.0"
description = "Privacy-first Codex to Obsidian knowledge manager"
authors = ["OCA-Duplex contributors"]
license = "Apache-2.0"
repository = "https://github.com/xiaocong-AIGC/OCA-Duplex"
edition = "2021"

[lib]
name = "oca_duplex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
urlencoding = "2"
